--- a/Demos/js-demo/index.html
+++ b/Demos/js-demo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <meta charset="UTF-8">
@@ -7,21 +7,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Webinar Demo</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
-  <link id="jsapiTheme" rel="stylesheet" href="https://js.arcgis.com/4.14/esri/themes/light/main.css" />
+  <!-- apply light or dark color -->
+  <link rel="stylesheet" href="https://js.arcgis.com/4.14/esri/themes/dark/main.css"
+    media="(prefers-color-scheme: dark)">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.14/esri/themes/light/main.css"
+    media="(prefers-color-scheme: no-preference), (prefers-color-scheme: light)">
   <link rel="stylesheet" href="css/main.css">
   <script>
-    // Apply dark color scheme if specified 
-    if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-      const link = document.getElementById("jsapiTheme");
-      link.href = `https://js.arcgis.com/4.14/esri/themes/dark/main.css`
-    }
-    var locationPath = location.pathname.replace(/\/[^\/]+$/, "");
+    const locale = "en";
+    const locationPath = location.pathname.replace(/\/[^\/]+$/, "");
     window.dojoConfig = {
+      locale,
       packages: [{
         name: "app",
         location: locationPath + "/app"
       }]
     };
+    // Handle RTL 
+    const htmlNode = document.getElementsByTagName("html")[0];
+    htmlNode.setAttribute("lang", locale);
+    if (locale === "he" || locale === "ar") {
+      htmlNode.setAttribute("dir", "rtl");
+    }
 
   </script>
   <script src="https://js.arcgis.com/4.14/"></script>
